--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Html練習室</title>
 </head>
 <body>
-<H1>你們好我是．．．．．</H1>
+<H1>主要是說</H1>
+<a href="AboutMe.html">關於我</a>
 <H2>作業</H2>
 <p>沒有</p>
 </body>
