關於和主頁

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 <H1>主要是說</H1>
 <a href="AboutMe.html">關於我</a>
-<H2>作業</H2>
-<p>沒有</p>
+<H1>作業</H1>
+<p>無聊中～～～～
+    <br>沒有任何事情</p>
 </body>
 </html>
