--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
-
-    <link href="css/skill.css" rel="stylesheet">
-
     <link href="css/Link.css" rel="stylesheet">
 
+
+
+
+
 </head>
+
 <body id="pagetop">
+
 <div class="nav-scroller py-1 mb-2">
     <ul class="list">
         <li class="list__item--yellow" ><a class="nav-link js-scroll-trigger" href="#pagetop">
@@ -39,45 +42,39 @@
 
 <!-- 頁面內容-->
 <div class="container-fluid p-0">
-
     <!-- 關於我-->
     <section class="resume-section" id="aboutme">
         <div class="resume-section-content">
             <h2 class="mb-1">關於我</h2>
-            <p>我是李筠寧，來自南投縣。從小就接觸遊戲，非常喜歡遊戲中帶來的快樂。因此對於遊戲產業非常熱愛</p>
+            <p>我是李筠寧，來自南投縣。從小就接觸遊戲，非常喜歡遊戲中帶來的快樂。因此對於遊戲產業感到有興趣了解且想要完成完整作品。</p>
         </div>
-        <ul id="skill">
-            <li><span class="bar graphic-design"></span><h3>Graphic Design</h3></li>
-            <li><span class="bar html-css"></span><h3>Html // Css</h3></li>
-            <li><span class="bar jquery"></span><h3>jQuery // MoTools</h3></li>
-            <li><span class="bar wordpress"></span><h3>Wordpress</h3></li>
-        </ul>
-
     </section>
-    <!-- 作品-->
+         <!-- 作品-->
     <section class="resume-section" id="opus">
         <div class="resume-section-content">
             <h2 class="mb-5">作品</h2>
+
         </div>
     </section>
 
     <!-- 連結-->
+
     <section class="resume-section" id="contact">
         <div class="resume-section-content">
-    <a href="#" class="social-button social-button--facebook" aria-label="Facebook">
+    <a href="https://www.facebook.com/Yaron.ip/" class="social-button social-button--facebook" aria-label="Facebook">
         <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="#" class="social-button social-button--linkedin" aria-label="LinkedIn">
+    <a href="https://www.youtube.com/channel/UCjEYzxNmIjow1Mbmtm1Xn1w" class="social-button social-button--youtube" aria-label="youtube">
         <i class="fab fa-linkedin-in"></i>
     </a>
-    <a href="#" class="social-button social-button--snapchat" aria-label="Snapchat">
+    <a href="https://www.twitch.tv/llyaronll" class="social-button social-button--twitch" aria-label="twitch">
         <i class="fab fa-snapchat-ghost"></i>
     </a>
-    <a href="#" class="social-button social-button--github" aria-label="GitHub">
+    <a href="https://github.com/llYaronll" class="social-button social-button--github" aria-label="GitHub">
         <i class="fab fa-github"></i>
     </a>
         </div>
-    </section>>
+    </section>
 
 </div>
 
